--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       var node = document.getElementById('main');
       var app = Elm.Unscriber.embed(node);
     </script>
+    <a href="https://github.com/Fusxfaranto/Unscriber"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   </body>
 </html>
 
